feat: add search support for geofences resource
